# cython-dev-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/cython_dev_tools/: common.py  cytools.py  logs.py  settings.py
src/cython_dev_tools/_boilerplate_package/: Makefile  cytools_script.py  setup.py
src/cython_dev_tools/_boilerplate_package/bp_cython/: bp_cython_class.pxd  bp_cython_class.pyx
src/cython_dev_tools/_boilerplate_package/bp_cython/tests/: test_bp_cython_class_.pyx  test_bp_cython_class_mock.py  (+1 more)
src/cython_dev_tools/_cy_tools_samples/debugging/: abort.pyx  breakpoint.pyx  errors.pyx  memory_leaks.pyx
src/cython_dev_tools/_cy_tools_samples/low_level/: arrays_resize.pyx  dynamic_memory.pyx  hello_world.pyx  strings.pyx
src/cython_dev_tools/_cy_tools_samples/profiler/: py_module.py
src/cython_dev_tools/building/: annotate.py  annotate_templates.py  build.py  initialize.py
src/cython_dev_tools/debugger/: debug.py  run.py  valgrind.py
src/cython_dev_tools/debugger/gbd/: gdb_command_template.py  libcython.py
src/cython_dev_tools/maintenance/: __init__.py  clean.py  template.py
src/cython_dev_tools/testing/: coverage.py  coverage_plugin.py  profiler.py  tests.py
src/cython_tools/: __init__.py  common.py  cytools.py  logs.py  settings.py
src/cython_tools/_boilerplate_package/: Makefile  cytools_script.py  setup.py
src/cython_tools/_boilerplate_package/bp_cython/: bp_cython_module.pyx
src/cython_tools/_cy_tools_samples/: cy_memory_unsafe.pyx
src/cython_tools/_cy_tools_samples/debugging/: assertions.pyx  segfault.pyx
src/cython_tools/_cy_tools_samples/low_level/: arrays.pyx  errors.pyx  pointers.pyx  pthreads.pyx
src/cython_tools/_cy_tools_samples/profiler/: cy_module.pyx
src/cython_tools/_cy_tools_samples/with_c_code/: call_mymath.pyx
src/cython_tools/boilerplate_package/bp_cython/: bp_cython_class.pyx  bp_cython_module.pxd
src/cython_tools/builder/: __init__.py  command.py
src/cython_tools/building/: __init__.py  annotate.py  build.py  initialize.py
src/cython_tools/debugger/: __init__.py  debug.py  run.py  valgrind.py
src/cython_tools/debugger/gbd/: gdb_command_template.py  libcython.py  libpython.py
src/cython_tools/initializer/: __init__.py  boilerplate.py  command.py  samples.py
src/cython_tools/maintenance/: __init__.py  clean.py  template.py
src/cython_tools/testing/: __init__.py  coverage.py  coverage_plugin.py  profiler.py  tests.py
tests/: debug_coverage.py  init_test_project.py  test_annotate.py  test_build.py  test_common.py  test_cover.py  test_debug.py  test_lprun.py
tests/test_inputs/: class_search.pyx  python_class.py
(+4 files in other folders)
