[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cython-dev-tools"
version = "0.6.7"
description = "Cython development toolkit (debugger, profiler, coverage, unit tests)"
readme = "README.md"
authors = [{ name = "Alex Veden", email = "i@alexveden.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cython", "debugger", "profiler", "coverage", "unit tests"]
dependencies = [
    "cython < 3.0.0",
    "numpy",
    "pytest",
    "coverage",
    "line_profiler",
]
requires-python = ">=3.6"


[project.urls]
Homepage = "https://github.com/alexveden/cython-dev-tools"

[project.scripts]
cytool = "cython_dev_tools.cytools:main"
